<resources>
    <string name="app_name">Bracketly</string>
    <string name="title_activity_login">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="start">Start</string>
    <string name="tournaments">Tournaments</string>
    <string name="title_activity_add_tournament">Add Tournament</string>
    <string name="tournament_name">Name:</string>
    <string name="tournament_name_hint">Name</string>
    <string name="tournament_event_date">Event date:</string>
    <string name="tournament_event_date_hint">Event date</string>
    <string name="bracket_type">Bracket type: </string>
    <string name="bracket_seeding">Seeding: </string>
    <string name="save">Save</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="modify_tournament">Edit</string>
    <string name="join_tournaments">Join</string>
    <string name="start_tournament">Start</string>
    <string name="vs">VS</string>
    <string name="no_items_on_list">No items on list.</string>
    <string name="tournament_not_started_message">Tournament has not started yet</string>
    <string name="title_activity_match">Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="winner_button_text">Mark as winner</string>
    <string name="ranking">Ranking</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="log_in">Log in</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="owner">Owner</string>
</resources>
